syntax = "proto3";

package techschool.pcbook;
option java_multiple_files = true;
option java_package = "com.gitlab.techschool.pcbook.pb";

import "laptop_message.proto";

message CreateLaptopRequest {
  Laptop laptop = 1;
}

message CreateLaptopResponse {
  string id = 1;
}

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
}
